@@ -7,7 +7,7 @@
 #      
 #  Copyright (c) 2003  Mats Bengtsson
 #  
-# $Id: MUC.tcl,v 1.42 2004-07-09 06:26:05 matben Exp $
+# $Id: MUC.tcl,v 1.43 2004-07-30 09:33:15 matben Exp $
 
 package require entrycomp
 package require muc
@@ -451,6 +451,17 @@ proc ::Jabber::MUC::DoEnter {token} {
     ::hooks::run groupchatEnterRoomHook $roomJid "muc"
 }
 
+# Jabber::MUC::EnterRoom --
+# 
+#       Programmatic way to enter a room.
+
+proc ::Jabber::MUC::EnterRoom {roomjid nick args} {
+    upvar ::Jabber::jstate jstate
+    
+    eval {$jstate(muc) enter $roomjid $nick -command \
+      [list [namespace current]::EnterCallback]} $args
+}
+
 # Jabber::MUC::EnterCallback --
 #
 #       Presence callabck from the 'muc enter' command.
@@ -458,14 +469,14 @@ proc ::Jabber::MUC::DoEnter {token} {
 #       is needed for entering room.
 #
 # Arguments:
-#       mucName 
+#       mucname 
 #       type    presence typ attribute, 'available' etc.
 #       args    -from, -id, -to, -x ...
 #       
 # Results:
 #       None.
 
-proc ::Jabber::MUC::EnterCallback {mucName type args} {
+proc ::Jabber::MUC::EnterCallback {mucname type args} {
     
     Debug 3 "::Jabber::MUC::EnterCallback type=$type, args='$args'"
     array set argsArr $args
@@ -1381,7 +1392,7 @@ proc ::Jabber::MUC::EditListCloseHook {wclose} {
     }   
 }
 
-proc ::Jabber::MUC::EditListGetCB {roomjid callid mucName type subiq} {
+proc ::Jabber::MUC::EditListGetCB {roomjid callid mucname type subiq} {
 
     upvar [namespace current]::${roomjid}::editlocals editlocals
     upvar ::Jabber::jstate jstate
@@ -1724,7 +1735,7 @@ proc ::Jabber::MUC::CancelConfig {roomjid w} {
     destroy $w
 }
 
-proc ::Jabber::MUC::ConfigGetCB {roomjid mucName type subiq} {
+proc ::Jabber::MUC::ConfigGetCB {roomjid mucname type subiq} {
     variable wbox
     variable wsearrows
     variable wbtok
@@ -1755,7 +1766,7 @@ proc ::Jabber::MUC::DoRoomConfig {roomjid w} {
     destroy $w
 }
 
-proc ::Jabber::MUC::RoomConfigResult {roomjid mucName type subiq} {
+proc ::Jabber::MUC::RoomConfigResult {roomjid mucname type subiq} {
 
     if {$type == "error"} {
 	regexp {^([^@]+)@.*} $roomjid match roomName
@@ -1903,7 +1914,7 @@ proc ::Jabber::MUC::DestroyCloseHook {wclose} {
 # 
 #       Generic callbacks when setting things via <iq/> or <presence/>
 
-proc ::Jabber::MUC::IQCallback {roomjid mucName type subiq} {
+proc ::Jabber::MUC::IQCallback {roomjid mucname type subiq} {
     
     if {$type == "error"} {
     	regexp {^([^@]+)@.*} $roomjid match roomName
@@ -1914,7 +1925,7 @@ proc ::Jabber::MUC::IQCallback {roomjid mucName type subiq} {
 }
 
 
-proc ::Jabber::MUC::PresCallback {roomjid mucName type args} {
+proc ::Jabber::MUC::PresCallback {roomjid mucname type args} {
     
     if {$type == "error"} {
     	set errcode ???
